# OpenFaaSBroker

./: Cargo.toml  README.md  manifest.yml  package-lock.json  package.json  swagger.yaml
src/: app.js  catalog.rs  faas_store.rs  main.rs  openfaas_client.rs  service_instances.rs
src/api/: catalog.js  index.js
