[package]
name = "open_faas_broker"
version = "0.1.0"
authors = ["Andrew Gracey <agracey@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.19"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
